; ModuleID = '/home/carl/AnghaBench/micropython/drivers/wiznet5k/ethernet/w5500/extr_w5500.c_wiz_recv_ignore.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/wiznet5k/ethernet/w5500/extr_w5500.c_wiz_recv_ignore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wiz_recv_ignore(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @getSn_RX_RD(i32 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = add nsw i64 %9, %8
  store i64 %10, i64* %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @setSn_RX_RD(i32 %11, i64 %12)
  ret void
}

declare dso_local i64 @getSn_RX_RD(i32) #1

declare dso_local i32 @setSn_RX_RD(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
